# mendel-gpu

./: ProjectHome.md  README.txt  configuration.md  region_specific.md  whole_genome.md
src/: Makefile.am  c_interface.cpp  chunk.cpp  cl_constants.h  cl_templates.cpp  configure.ac  include.mk  io_manager.cpp  io_manager.hpp  kernels_denovo.c  locations.gpu  main.cpp  make_haplo_posteriors.cpp  makefile  matrix_completion.f90  mendel_gpu.hpp  mendel_gpu_common.cpp  mendel_gpu_denovo.cpp  mendel_gpu_guide.cpp  penetrance.hpp  prepare_inputfiles.cpp  read_penetrance.hpp  read_utilities.hpp
src/algorithms/: common.cpp  denovo.cpp  denovo_reads.cpp
src/bam_utility/: filter_vcf.cpp  locations.baseline  make_refseq_fasta.cpp  parse_vcf.cpp  postprocess_art_sam.cpp  process_macs_output.cpp  transpose.cpp
src/finclude/: cases_and_controls_option.mod  compute_location_scores_option.mod  count_minor_alleles_option.mod  define_superloci_option.mod  descent_graph_method.mod  detect_genotyping_errors_option.mod  distribution_functions.mod  estimate_ethnic_admixture_option.mod  fetch_real_snp_genotypes_option.mod  fisher_routines.mod  gamete_competition_analysis_option.mod  genetic_model_routines.mod  haplotype_construction_option.mod  input_data.mod  joint_linkage_and_association_option.mod  kinship_coefficients_option.mod  linear_algebra.mod  locus_and_pedigree_structures.mod  mendel.mod  mouse.mod  multipoint_map_option.mod  optimize.mod  option_supporting_routines.mod  polygenic_qtl_analysis_option.mod  random_sample.mod  snp_kinship_coefficients_option.mod  snp_ped_gwas_setup_option.mod
src/imputation/: denovo.cpp  denovo_opencl.cpp  guide.cpp  guide_opencl.cpp
src/init/: common.cpp  common_opencl.cpp  denovo.cpp  (+12 more)
(+210 files in other folders)
